objects/vlocity_ins__SICCode__c.object
<CustomObject>
    <description>The Standard Industrial Classification (SIC) is a system for classifying industries by a four-digit code that categorize companies by the type of business activities they engage in.</description>
    <fields>
        <fullName>vlocity_ins__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0100-0999	Agriculture, Forestry and Fishing</fullName>
                </value>
                <value>
                    <fullName>1000-1499	Mining</fullName>
                </value>
                <value>
                    <fullName>1500-1799	Construction</fullName>
                </value>
                <value>
                    <fullName>1800-1999	not used</fullName>
                </value>
                <value>
                    <fullName>2000-3999	Manufacturing</fullName>
                </value>
                <value>
                    <fullName>4000-4999	Transportation, Communications, Electric, Gas and Sanitary service</fullName>
                </value>
                <value>
                    <fullName>5000-5199	Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>5200-5999	Retail Trade</fullName>
                </value>
                <value>
                    <fullName>6000-6799	Finance, Insurance and Real Estate</fullName>
                </value>
                <value>
                    <fullName>7000-8999	Services</fullName>
                </value>
                <value>
                    <fullName>9100-9729	Public Administration</fullName>
                </value>
                <value>
                    <fullName>9900-9999	Nonclassifiable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SIC Code</label>
    <nameField>
        <label>SIC Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>